fix spacing of exact-match__content

--- a/extensions/wikia/Search/css/_exact-match.scss
+++ b/extensions/wikia/Search/css/_exact-match.scss
@@ -34,7 +34,7 @@ $border-size: 1px;
 			line-height: 1rem;
 			list-style: none;
 			margin: 0;
-			padding: 10px 0;
+			padding: 15px 0;
 
 			li {
 				//don't grow elements so they can distribute evenly
@@ -54,7 +54,7 @@ $border-size: 1px;
 			background-color: $color-module-background;
 			border: $border-size solid $color-search-grid-border;
 			border-top: none;
-			padding: 10px 25px;
+			padding: 5px 25px 15px;
 			margin:{
 				bottom: 30px;
 				top: -$border-size;
